<resources>
    <string name="app_name">BookFinder</string>
    <string name="enter_title">Enter Title</string>
    <string name="search">SEARCH</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author">Author :</string>
    <string name="title">Title :</string>
    <string name="DetailsAuthor">Author :</string>
    <string name="information">Information :</string>
    <string name="publisher">Publisher :</string>
    <string name="publisher_date">Publisher Date :</string>
    <string name="no_of_pages">No Of Pages :</string>
    <string name="not_available">not Available</string>
    <string name="description">Description</string>
</resources>