<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BookDetailsFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:id="@+id/book_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_title"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/book_image"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/info_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:textSize="24sp"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textStyle="bold"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/book_image"/>

    <TextView
        android:id="@+id/author_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/DetailsAuthor"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:padding="16dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/info_text_view"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/author_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/author_text"
        app:layout_constraintBaseline_toBaselineOf="@id/author_text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/publisher_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/publisher"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:padding="16dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/author_text"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/publisher_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/publisher_text"
        app:layout_constraintBaseline_toBaselineOf="@id/publisher_text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/publisherDate_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/publisher_date"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:padding="16dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/publisher_text"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/publisherDate_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/publisherDate_text"
        app:layout_constraintBaseline_toBaselineOf="@id/publisherDate_text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/pages_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_of_pages"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:padding="16dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/publisherDate_text"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/pages_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        app:layout_constraintStart_toEndOf="@id/pages_text"
        app:layout_constraintBaseline_toBaselineOf="@id/pages_text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/description_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="24sp"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textStyle="bold"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/pages_text"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description_text_view"
        app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        />

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>